akasha, spec: support retrieving comments
